@@ -37,6 +37,7 @@
 #include "cwdecoder.hpp"
 #include "rttydecoder.hpp"
 #include "sstvdecoder.hpp"
+#include "faxdecoder.hpp"
 
 #include <csdr/version.hpp>
 
@@ -282,6 +283,12 @@ PyInit_modules(void) {
     PyObject* SstvDecoderType = PyType_FromSpecWithBases(&SstvDecoderSpec, bases);
     if (SstvDecoderType == NULL) return NULL;
 
+    Py_INCREF(ModuleType);
+    bases = PyTuple_Pack(1, ModuleType);
+    if (bases == NULL) return NULL;
+    PyObject* FaxDecoderType = PyType_FromSpecWithBases(&FaxDecoderSpec, bases);
+    if (FaxDecoderType == NULL) return NULL;
+
     PyObject *m = PyModule_Create(&pycsdrmodule);
     if (m == NULL) {
         return NULL;
@@ -362,6 +369,8 @@ PyInit_modules(void) {
     PyModule_AddObject(m, "RttyDecoder", RttyDecoderType);
 
     PyModule_AddObject(m, "SstvDecoder", SstvDecoderType);
+
+    PyModule_AddObject(m, "FaxDecoder", FaxDecoderType);
 
     PyObject* csdrVersion = PyUnicode_FromStringAndSize(Csdr::version.c_str(), Csdr::version.length());
     if (csdrVersion == NULL) return NULL;
