@@ -1,3 +1,9 @@
+pycsdr (0.18.8) bullseye jammy; urgency=low
+
+  * Added FAX decoder.
+
+ -- Marat Fayzullin <luarvique@gmail.com>  Sat, 22 Mar 2023 16:12:00 +0000
+
 pycsdr (0.18.7) bullseye jammy; urgency=low
 
   * Added debug time parameter to the SSTV decoder module.
